--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<div class="container">
 			<div id="home-row-1" class="row clearfix">
 				<div class="col-12">
-					<h1 class="font-semibold"> JUTNALIS <span class="font-thin">PATRIANS</span></h1>
+					<h1 class="font-semibold"> JURNALIS <span class="font-thin">PATRIANS</span></h1>
 					<h4 class="font-thin">We are an <span class="font-semibold">jurnalistik </span>universitas patria artha</h4>
 					<br>
 					<br>
